   setscanline().
   https://rt.cpan.org/Ticket/Display.html?id=69242

 - require a later version of CPAN::Meta to ensure JSON::PP and
   CPAN::Meta::YAML are available.
   https://rt.cpan.org/Ticket/Display.html?id=69008

 - hoist the per-line calculations for the flines implementations, and
   modernize the tests a bit.
   https://rt.cpan.org/Ticket/Display.html?id=70126

Imager 0.84_01 - 8 Aug 2011
==============

Development release as a sanity check for the types re-work.

Massive types re-work:

 - the type used internally for pixel co-ordinates and image sizes is
   now 64-bit on 64-bit platforms (at least sane ones).

 - size_t is now used consistently for memory block sizes.

 - since this changes the binary interface, the Imager API version has
   been incremented.  Any module that uses the API will need to be
   rebuilt.  In most cases that will be enough, but calls to any APIs
   that take a pointer to image sizes may need source changes.

 - you should be able to create very large images on 64-bit systems,
   if you have enough memory.  Successfully created a 32768 x 49192 x
   3 channel image, filled with a tiled image and scaled it.  The
   unscaled image was also successfully saved to a JPEG.

 - check the image size before attempting to write BMP, GIF, JPEG,
   PNG, SGI, TGA, TIFF images.

 - correctly handle reading TGA images over 32767 pixels wide or tall.

Incidental changes:

 - the gif_left and gif_top tags are now clamped to non-negative
   values when writing a GIF image.

 - removed dead callback read/write code

The default maximum memory size when reading files is now 1G.

Imager 0.84 - 20 Jun 2011
===========

 - Imager no longer inherits from Exporter (unless you're running an
   old, old perl.

 - Imager can now write progressive JPEGs (it could always read them).
   https://rt.cpan.org/Ticket/Display.html?id=68691

Bug fixes:

 - re-work, document and test Imager's logging facility.
   https://rt.cpan.org/Ticket/Display.html?id=65227